[package]
name = "cloud-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
dashmap = { version = "6.1.0", features = ["raw-api", "rayon"] }
futures-util = "0.3.31"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "std"] }
