[package]
name = "dlog-proof"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1.8.0", features = ["serde"] }
elliptic-curve = { version = "0.13.8", features = ["sec1", "serde"] }
hashbrown = "0.15.1"
k256 = { version = "0.13.4", features = ["serde", "sha256"] }
rand = { version = "0.8.5", features = ["rand_chacha"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
num-bigint = "0.4"
num-traits = "0.2.19"
