[package]
name = "src-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.31"
js-sys = "0.3.72"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"

[dependencies.web-sys]
version = "0.3.72"
features = [
  "BinaryType",
  "console",
  "ErrorEvent",
  "MessageEvent",
  "WebSocket",
]
